[package]
name = "serde-basic"
version = "0.1.0"
authors = ["Raymundo Vásquez Ruiz <raymundo.vr@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7.1"